# CrappyCraft

./: .travis.yml  CMakeLists.txt  get_glfw3.sh
Game/: CMakeLists.txt
Game/src/: CrappyCraft.cpp  CrappyCraft.h
Graphics/src/Textures/: TextureManager.cpp  TextureManager.h
Launcher/src/: Authenticator.cpp  Authenticator.h  CrappyCraftLauncher.cpp  CrappyCraftLauncher.h  HTTPSClient.cpp  HTTPSClient.h
Networking/: CMakeLists.txt
Networking/src/: VarInt.h
Networking/src/Packets/: CSHandshakePacket.h  CSLoginEncryptionResponsePacket.h  CSLoginStartPacket.h  CSPlayAnimationPacket.h  CSPlayChatMessagePacket.h  CSPlayClickWindowPacket.h  CSPlayClientSettingsPacket.h  CSPlayClientStatusPacket.h  CSPlayCloseWindowPacket.h  CSPlayConfirmTransactionPacket.h  CSPlayCreativeInventoryActionPacket.h  CSPlayEnchantItemPacket.h  CSPlayEntityActionPacket.h  CSPlayHeldItemChangePacket.h  CSPlayKeepAlivePacket.h  CSPlayPlayerAbilitiesPacket.h  CSPlayPlayerBlockPlacementPacket.h  CSPlayPlayerDiggingPacket.h  CSPlayPlayerLookPacket.h  CSPlayPlayerPacket.h  CSPlayPlayerPositionAndLookPacket.h  CSPlayPlayerPositionPacket.h  CSPlayPluginMessagePacket.h  CSPlaySteerVehiclePacket.h  CSPlayTabCompletePacket.h  CSPlayUpdateSignPacket.h  CSPlayUseEntityPacket.h  CSStatusPingPacket.h  CSStatusRequestPacket.h  Packet.h  PacketType.h  SCLoginDisconnectPacket.h  SCLoginEncryptionRequestPacket.h  SCLoginSuccessPacket.h  SCPlayAnimationPacket.h  SCPlayAttachEntityPacket.h  SCPlayBlockActionPacket.h  SCPlayBlockBreakAnimationPacket.h  SCPlayBlockChangePacket.h  SCPlayChangeGameStatePacket.h  (+62 more)
